[package]
name = "whirlpool-cpi"
version = "0.1.4"
authors = ["Developer Advocate from Orca"]
description = "CPI Adapter for Orca Whirlpool"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi"

[features]
# build for CPI
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
# Update the version to match your main project's Anchor version.
anchor-lang = "=0.31.1"

# unpack TickArray
bincode = "1"
default-boxed = "0.2.0"
